# python-project-template

./: .editorconfig  .pre-commit-config.yaml  LICENSE  Makefile  README.md  hatch.toml  mkdocs.yml  pyproject.toml
.github/workflows/: docs-build.yml  docs-deploy.yml  release.yml  test.yml
docs/: development.md  document.md  index.md  release.md
docs/reference/: mycli.md
scripts/: init.py
src/mycli/: __init__.py  cli.py
tests/: test_cli.py
