[project]
name = "mycli"
version = "0.1.0"
description = "A modern Python project template."
authors = [{ name = "Yeongseon Choe", email = "yeongseon.choe@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]",
    "rich",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "build",
    "coverage",
    "hatch",
    "mkdocs",
    "mkdocs-material",
    "mypy",
    "pre-commit",
    "pytest",
    "ruff",
    "types-requests",
    "tox"
]

[project.scripts]
mycli = "mycli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [".venv", "build", "dist", "__pycache__"]
src = ["src"]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B"]  # (추가) Bugbear 검사도 포함

[tool.ruff.lint.isort]
known-first-party = ["mycli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["src/mycli"]

[tool.coverage.report]
show_missing = true
skip_covered = true
